--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -129,6 +129,7 @@ allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.98.11.62;
+allow 143.20.64.235;
 allow 144.126.133.74;
 allow 144.172.73.31;
 allow 146.103.43.17;
@@ -201,6 +202,7 @@ allow 176.118.193.33;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
+allow 176.65.140.210;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -879,6 +881,7 @@ allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.184.48.78;
+allow 23.190.216.8;
 allow 23.191.200.10;
 allow 23.191.200.11;
 allow 23.191.200.12;
@@ -898,10 +901,13 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -943,6 +949,7 @@ allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
+allow 2602:fa86::be24:11ff:fe70:fc41;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
@@ -1442,7 +1449,6 @@ allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
-allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:12:baad:f00d:c0fe:babe;
 allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
@@ -1551,6 +1557,7 @@ allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:bec4:1821:3a6::a;
 allow 2a12:bec4:1821:3a7::a;
 allow 2a12:bec4:1821:3a8::a;
+allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
@@ -1683,7 +1690,6 @@ allow 45.9.156.161;
 allow 45.9.156.22;
 allow 45.9.168.192;
 allow 45.94.31.68;
-allow 45.95.169.104;
 allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.18;
@@ -1882,7 +1888,6 @@ allow 94.74.164.89;
 allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
-allow 95.168.173.143;
 allow 95.211.244.28;
 allow 96.8.119.172;
 allow 98.128.173.33;
