--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -129,6 +129,7 @@ deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
 deny 141.98.11.62;
+deny 143.20.64.235;
 deny 144.126.133.74;
 deny 144.172.73.31;
 deny 146.103.43.17;
@@ -201,6 +202,7 @@ deny 176.118.193.33;
 deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.65.134.4;
+deny 176.65.140.210;
 deny 176.65.148.133;
 deny 176.65.148.3;
 deny 176.65.149.100;
@@ -879,6 +881,7 @@ deny 23.137.254.244;
 deny 23.151.8.8;
 deny 23.155.8.104;
 deny 23.184.48.78;
+deny 23.190.216.8;
 deny 23.191.200.10;
 deny 23.191.200.11;
 deny 23.191.200.12;
@@ -898,10 +901,13 @@ deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
+deny 23.191.200.28;
 deny 23.191.200.29;
+deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
+deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -943,6 +949,7 @@ deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
 deny 2602:f915:f:3b43::1;
+deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
@@ -1442,7 +1449,6 @@ deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:b107:dd0::3:fa35:9316;
-deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:12:baad:f00d:c0fe:babe;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
@@ -1551,6 +1557,7 @@ deny 2a12:a800:9:1:45:88:186:92;
 deny 2a12:bec4:1821:3a6::a;
 deny 2a12:bec4:1821:3a7::a;
 deny 2a12:bec4:1821:3a8::a;
+deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:d::d28b;
@@ -1683,7 +1690,6 @@ deny 45.9.156.161;
 deny 45.9.156.22;
 deny 45.9.168.192;
 deny 45.94.31.68;
-deny 45.95.169.104;
 deny 45.95.169.109;
 deny 45.95.169.110;
 deny 45.95.169.18;
@@ -1882,7 +1888,6 @@ deny 94.74.164.89;
 deny 94.75.225.81;
 deny 95.128.43.164;
 deny 95.143.193.125;
-deny 95.168.173.143;
 deny 95.211.244.28;
 deny 96.8.119.172;
 deny 98.128.173.33;
