--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -144,6 +144,7 @@ deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
 deny 2602:f915:f:3b43::1;
+deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
@@ -642,7 +643,6 @@ deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:b107:dd0::3:fa35:9316;
-deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:12:baad:f00d:c0fe:babe;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
@@ -751,6 +751,7 @@ deny 2a12:a800:9:1:45:88:186:92;
 deny 2a12:bec4:1821:3a6::a;
 deny 2a12:bec4:1821:3a7::a;
 deny 2a12:bec4:1821:3a8::a;
+deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:d::d28b;
