--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -129,6 +129,7 @@ set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.98.11.62;
+set_real_ip_from 143.20.64.235;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 144.172.73.31;
 set_real_ip_from 146.103.43.17;
@@ -201,6 +202,7 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
+set_real_ip_from 176.65.140.210;
 set_real_ip_from 176.65.148.133;
 set_real_ip_from 176.65.148.3;
 set_real_ip_from 176.65.149.100;
@@ -879,6 +881,7 @@ set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
+set_real_ip_from 23.190.216.8;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
 set_real_ip_from 23.191.200.12;
@@ -898,10 +901,13 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -943,6 +949,7 @@ set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
 set_real_ip_from 2602:f6f6:2:dc17::1;
 set_real_ip_from 2602:f915:f:3b43::1;
+set_real_ip_from 2602:fa86::be24:11ff:fe70:fc41;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1442,7 +1449,6 @@ set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
-set_real_ip_from 2a0e:bfc0:0:11::796d;
 set_real_ip_from 2a0e:bfc0:0:12:baad:f00d:c0fe:babe;
 set_real_ip_from 2a0e:bfc0:0:14::24a8;
 set_real_ip_from 2a0e:bfc0:0:2::8a62;
@@ -1551,6 +1557,7 @@ set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a12:bec4:1821:3a6::a;
 set_real_ip_from 2a12:bec4:1821:3a7::a;
 set_real_ip_from 2a12:bec4:1821:3a8::a;
+set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2c0f:6c0:0:2::6983;
 set_real_ip_from 2c0f:6c0:0:d::d28b;
@@ -1683,7 +1690,6 @@ set_real_ip_from 45.9.156.161;
 set_real_ip_from 45.9.156.22;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
-set_real_ip_from 45.95.169.104;
 set_real_ip_from 45.95.169.109;
 set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.18;
@@ -1882,7 +1888,6 @@ set_real_ip_from 94.74.164.89;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
-set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.8.119.172;
 set_real_ip_from 98.128.173.33;
