--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -199,6 +199,7 @@ allow 173.224.219.44;
 allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
@@ -585,7 +586,6 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 196.251.84.71;
 allow 198.167.206.252;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -874,7 +874,6 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -892,7 +891,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -904,7 +902,6 @@ allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -954,7 +951,6 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1184,6 +1180,7 @@ allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
 allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
@@ -1879,6 +1876,7 @@ allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.156.152.234;
+allow 94.16.115.121;
 allow 94.16.121.91;
 allow 94.230.208.147;
 allow 94.230.208.148;
