--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -116,6 +116,7 @@ allow 124.198.132.172;
 allow 124.198.132.237;
 allow 124.198.132.52;
 allow 125.212.241.131;
+allow 125.253.56.119;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
@@ -248,7 +249,6 @@ allow 185.100.87.174;
 allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.41;
-allow 185.10.16.41;
 allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
@@ -899,7 +899,6 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.31;
 allow 23.191.200.4;
@@ -928,6 +927,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1211,7 +1211,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1444,6 +1443,7 @@ allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
+allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:12:baad:f00d:c0fe:babe;
 allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
@@ -1685,6 +1685,7 @@ allow 45.9.156.161;
 allow 45.9.156.22;
 allow 45.9.168.192;
 allow 45.94.31.68;
+allow 45.95.169.104;
 allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.18;
@@ -1709,7 +1710,6 @@ allow 5.181.177.245;
 allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1763,6 +1763,7 @@ allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
