--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -116,6 +116,7 @@ deny 124.198.132.172;
 deny 124.198.132.237;
 deny 124.198.132.52;
 deny 125.212.241.131;
+deny 125.253.56.119;
 deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
@@ -248,7 +249,6 @@ deny 185.100.87.174;
 deny 185.100.87.192;
 deny 185.100.87.250;
 deny 185.100.87.41;
-deny 185.10.16.41;
 deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
@@ -899,7 +899,6 @@ deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
-deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.31;
 deny 23.191.200.4;
@@ -928,6 +927,7 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.93;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1211,7 +1211,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1444,6 +1443,7 @@ deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:b107:dd0::3:fa35:9316;
+deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:12:baad:f00d:c0fe:babe;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
@@ -1685,6 +1685,7 @@ deny 45.9.156.161;
 deny 45.9.156.22;
 deny 45.9.168.192;
 deny 45.94.31.68;
+deny 45.95.169.104;
 deny 45.95.169.109;
 deny 45.95.169.110;
 deny 45.95.169.18;
@@ -1709,7 +1710,6 @@ deny 5.181.177.245;
 deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.253.247.27;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1763,6 +1763,7 @@ deny 66.78.40.225;
 deny 66.94.111.228;
 deny 67.219.109.141;
 deny 71.19.144.106;
+deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 72.5.43.62;
