--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -200,6 +200,7 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.140.210;
@@ -486,6 +487,7 @@ set_real_ip_from 188.68.52.231;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.2;
 set_real_ip_from 190.120.229.98;
+set_real_ip_from 190.211.254.185;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
 set_real_ip_from 192.159.99.168;
@@ -898,11 +900,9 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
@@ -1159,6 +1159,7 @@ set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
